Hid my token lol

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "prefix": "bx.",
-  "token": "NTQzODc2OTgyMjE2MTk2MTA4.XKvhew.Nd5PDxfjM8lYNkgcShEEfC5JA1k",
+  "token": "your-token-here-lmfao",
   "colour": "#592a16"
 }
